tests/macros/int/page_size.rs
fn main() {
    inquisition::questions![Int { page_size: todo!() }];
}
